2014-03-01  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c, x_display_x68kgrf.c:
	  - The default value "separate_wall_picture" option is changed to true.

	* x_display_x68kgrf.c:
	  - Merge https://gist.github.com/tsutsui/9285759.
	    (Thanks to @tsutsuii san)
	  - The default resolution is changed to 768x512x4.

2014-02-28  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.android: Updated.

	* android/jni/x_display.[ch]: locked = -1 on APP_CMD_TERM_WINDOW.

2014-02-28  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: load_file() calls x_display_get_bitmap() on Android
	  instead of executing mlimgloader.

	* MLActivity.java: getBitmap() which loads image files is added.

	* android/jni/x_display.[ch]: x_display_get_bitmap() which calls
	  MLActivity::getBitmap() is added.

	* AndroidManifest.xml: android.permission.INTERNET is added.

2014-02-27  Araki Ken  <arakiken@users.sf.net>

	* kik_pty_streams.c: Control characters defaults macros are added for Android.

	* version.h.in: 3.3.3 -> 3.3.3post

2014-02-22  Araki Ken  <arakiken@users.sf.net>

	* 3.3.3 released.
	  (tag "rel-3_3_3")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.3.

	* android/jni/x_display.c:
	  Java_mlterm_native_1activity_MLActivity_visibleFrameChanged() doesn't
	  change width and height of the display if new width or height is less
	  than 50 pixels.

2014-02-20  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c:
	  - rotate_mouse_cursor_shape() is added.
	  - if -rotate (right|left) option is specified on 8bpp or less
	    framebuffer, rotate_display is set to 0 and rotate_mouse_cursor_shape()
	    is called in x_display_open() to fall back to the normal shape.

	* fb/x_imagelib.c: Illegal memory access in resize_sixel() is fixed.

	* android/jni/Android.mk, java/Makefile.in: Minor fixes.

2014-02-19  Araki Ken  <arakiken@users.sf.net>
