@@ -45,7 +45,7 @@ AC_SUBST(LIBTOOL)
 #
 # NOTE: if --with-libtool is specified, stdc header isn't detected.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(langinfo.h dlfcn.h dl.h stropts.h sys/stropts.h stdint.h windows.h)
+AC_CHECK_HEADERS(langinfo.h dlfcn.h dl.h stropts.h sys/stropts.h stdint.h windows.h errno.h)
 
 #
 # --- Checks for library functions ---
