@@ -32,9 +32,10 @@
 static void
 help(void)
 {
-	printf( "mlimgloader [window id] [width] [height] [file path] (-c)\n") ;
-	printf( " window id: ignored.\n") ;
-	printf( " -c       : output XA_CARDINAL format data to stdout.\n") ;
+	/* Don't output to stdout where mlterm waits for image data. */
+	fprintf( stderr , "mlimgloader [window id] [width] [height] [file path] (-c)\n") ;
+	fprintf( stderr , " window id: ignored.\n") ;
+	fprintf( stderr , " -c       : output XA_CARDINAL format data to stdout.\n") ;
 }
 
 
@@ -57,7 +58,9 @@ main(
 
 	if( argc != 6 || strcmp( argv[5] , "-c") != 0)
 	{
-		goto  error ;
+		help() ;
+
+		return  -1 ;
 	}
 
 	if( ! ( cardinal = (u_char*)create_cardinals_from_sixel( argv[4])))
@@ -102,6 +105,7 @@ main(
 	return  0 ;
 
 error:
-	help() ;
+	kik_error_printf( "Couldn't load %s\n" , argv[4]) ;
+
 	return  -1 ;
 }
